--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider:
   flutter_svg: ^2.0.9
+  hive: ^2.2.3
+  hive_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
